Overflow bug?

--- a/public/menu.css
+++ b/public/menu.css
@@ -8,8 +8,8 @@
 }
 
 #menu-clickable-area {
-    background: red;
-    opacity: 0.5;
+    /* background: red;
+    opacity: 0.5; */
     right: 0.5em;
     top: 0.5em;
     width: 3em;
@@ -118,7 +118,7 @@
 
 /* -- Some responsive stuff -- */
 /* On bigger screens - make menu button bigger */
-/* @media screen and (min-width: 799px) {
+@media screen and (min-width: 799px) {
     #menu .menu-trigger {
         transform: scale(1.5);
         top: 3em;
@@ -133,12 +133,14 @@
 
 @media screen and (min-width: 945px) {
     #menu .menu-items.is-open {
+        text-align: -webkit-right;
         text-align: right;
         justify-content: flex-end;
         font-size: calc(0.8vw + 1.9vh);
     }
     #menu .menu-items.is-open > ul {
         text-align: -webkit-right;
+        text-align: right;
         margin-right: 4em;
         margin-top: -5em;
         padding-top: 6em;
@@ -146,8 +148,8 @@
     #menu .menu-items.is-open li {
         margin: 47px 0;
     }
-    .tgl+.tgl-btn {
+    /* .tgl+.tgl-btn {
         margin-right: 3em;
         margin-top: 1em;
-    }
-} */
+    } */
+}
